add intakeDao